<resources>
    <string name="app_name">Ayoolahraga</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Account</string>
    <string name="title_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="title_community">Title Community</string>
    <string name="description_community">Description Community</string>
    <string name="tempat_latihan">Training Ground</string>
    <string name="title_venue">Title Venue</string>
    <string name="address_venue">Address Venue</string>
    <string name="contact">Contact</string>
    <string name="email_community">Email Community</string>
    <string name="phone_community">Phone Community</string>
    <string name="chat_number">Chat Number</string>
    <string name="social_media">Social Media</string>
    <string name="description_venue">Description Venue</string>
    <string name="facility">Facility</string>
    <string name="operational">Time/ Schedule</string>
    <string name="peringkat_dan_ulasan">Ratings and Reviews</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="last_comment">Last Comment</string>
    <string name="alamat">Address</string>
    <string name="email_venue">Email Venue</string>
    <string name="phone_venue">Phone Venue</string>
    <string name="send_email">Send Email</string>
    <string name="ab">AB</string>
    <string name="name_c">Name</string>
    <string name="address_c">Address</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="hoby_c">Hobby</string>
    <string name="hoby">Hobby</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="data_tidak_tersedia">Data Not Available</string>
    <string name="name_user">Name User</string>
    <string name="phone_user">Phone User</string>
    <string name="email">Email</string>
    <string name="email_user">Email User</string>
    <string name="address_user">Address User</string>
    <string name="hoby_user">Hobby User</string>
    <string name="logout">Logout</string>
    <string name="selamat_datang">Welcome</string>
    <string name="sport_type">Sports Venue</string>
    <string name="list_community">Community Info</string>
    <string name="blog_news">Health and Sports Tips</string>
    <string name="login">Login</string>
    <string name="email_c">Email</string>
    <string name="password_c">Password</string>
    <string name="password">Password</string>
    <string name="login_l">Login</string>
    <string name="register_c">Register</string>
    <string name="password_confirmation_c">Password Confirmation</string>
    <string name="birth_c">Birth</string>
    <string name="phone_c">Phone</string>
    <string name="register">Register</string>
    <string name="language">Language</string>
    <string name="tutorial">Tutorial</string>
    <string name="dont_have_any_account_click_to_register">Don\'t have any account, click to register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="ke_tutorial">To tutorial</string>
    <string name="about_description">Ayoolahraga is an application that is useful for finding sports fields and sports
        communities in Indonesia, along with descriptions, operational hours, contact info, and others. This application
        is protected by copyright property of sportunys.com
    </string>
    <string name="direct_map">To the location</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>
    <string name="open_street">Open street</string>
    <string name="none"> </string>
    <string name="silahkan_masuk_atau_daftar">Please Login or Register</string>
    <string name="disini">here</string>
    <string name="masukan_dan_saran">Feedback and Suggestions</string>
    <string name="email_2">Email</string>
    <string name="whatsapp">Whatsapp</string>
</resources>
