<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
    android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".main.account.EditAccountActivity">

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/bg_circle">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/ab"
                  android:id="@+id/tv_image"
                  android:layout_centerInParent="true"
                  android:textColor="@android:color/white"
                  android:textSize="30sp"/>
    </RelativeLayout>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/name_c"
              android:textColor="@android:color/black"
              android:textStyle="bold"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/et_name"
              android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/address_c"
              android:textColor="@android:color/black"
              android:textStyle="bold"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/et_address"
              android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/phone_c"
              android:textColor="@android:color/black"
              android:textStyle="bold"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/et_phone"
              android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/hoby_c"
              android:textColor="@android:color/black"
              android:textStyle="bold"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/et_hoby"
              android:hint="@string/hoby"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_edit_profile"/>

</LinearLayout>