<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".auth.RegisterFragment">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

        <ImageView android:layout_centerInParent="true"
                   android:layout_width="wrap_content"
                   android:layout_height="200dp"
            android:src="@drawable/ayoolahraga_logo_green"
            tools:ignore="ContentDescription" />

        <LinearLayout
                android:background="@color/colorTransparent"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/register_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"
                      android:textSize="30sp"
                      android:textAlignment="center"
                      android:layout_marginBottom="20dp"/>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/name_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/et_name"
                      android:hint="@string/name"
                      android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/email_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/et_email"
                      android:hint="@string/email"
                      android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/password_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/et_password"
                      android:hint="@string/password"
                      android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/password_confirmation_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/et_password_confirmation"
                      android:hint="@string/password"
                      android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/birth_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>

            <LinearLayout android:layout_marginBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/tv_birth"
                          android:layout_marginEnd="5dp"
                          android:layout_gravity="center_vertical"
                          android:hint="yyyy-MM-dd"/>
                <ImageButton android:layout_width="35dp" android:layout_height="40dp"
                             android:src="@drawable/ic_date_range_black_24dp"
                             android:layout_gravity="start"
                             android:padding="5dp"
                    android:id="@+id/btn_birth"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/phone_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/et_phone"
                      android:hint="@string/phone"
                      android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="phone" />

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/address_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/et_address"
                      android:hint="@string/address"
                      android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/hoby_c"
                      android:textColor="@android:color/black"
                      android:textStyle="bold"/>
            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/et_hoby"
                      android:hint="@string/hoby"
                      android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/register"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btn_register"/>
            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/back_to_login"
                android:textSize="15sp"
                    android:id="@+id/btn_back"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>