<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@android:color/white"
        tools:context=".auth.LoginFragment">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_centerInParent="true"
                   android:layout_width="wrap_content"
                   android:layout_height="200dp"
            android:src="@drawable/ayoolahraga_logo_green"
            tools:ignore="ContentDescription" />
        <LinearLayout android:background="@color/colorTransparent" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </RelativeLayout>


    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/login"
                  android:textColor="@android:color/black"
                  android:textSize="30sp"
                  android:textStyle="bold"
                  android:textAlignment="center"
                  android:layout_marginBottom="20dp"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/email_c"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_email"
                  android:hint="@string/email"
                  android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/password_c"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_password"
                  android:layout_marginBottom="10dp"
                  android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/login_l"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_login"/>
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/dont_have_any_account_click_to_register"
            android:id="@+id/btn_register"
            android:textSize="15sp" />
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/ke_tutorial"
            android:textSize="15sp"
                android:id="@+id/btn_ke_tutorial"/>

    </LinearLayout>

</RelativeLayout>